--- a/08_homework.ipynb
+++ b/08_homework.ipynb
@@ -4522,7 +4522,7 @@
     }
    ],
    "source": [
-    "r2_score(y_test, y_pred)   # стал больше"
+    "r2_score(y_test, y_pred)  # коэффициент детерминации практически не изменился"
    ]
   },
   {
@@ -4534,9 +4534,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32144696",
+   "metadata": {},
+   "source": [
+    "При умножении матрицы признаков на обратимую матрицу, предсказания модели не изменятся, а значит не изменится и качество."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32c7db2",
+   "id": "773eea04",
    "metadata": {},
    "outputs": [],
    "source": []
